[project]
name = "tissue"
version = "1.11.3"
description = "Teacher material scraping backend and web app."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "apscheduler==3.11.0",
    "bcrypt==4.2.1",
    "cachetools==5.5.1",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "curl-cffi==0.7.4",
    "fastapi==0.115.7",
    "h11==0.14.0",
    "httptools==0.6.4",
    "idna==3.10",
    "lxml==5.3.0",
    "mako==1.3.8",
    "markupsafe==2.1.5",
    "passlib==1.7.4",
    "pillow==11.2.1",
    "pip-install==1.3.5",
    "pycookiecloud==1.0.4",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "qbittorrent-api==2026.5.1",
    "requests==2.32.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.37",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "tzlocal==5.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.19.0",
    "watchfiles==1.0.4",
    "websockets==14.2",
]

[tool.uv]
package = false
