[project]
name = "tissue"
version = "1.11.3"
description = "Teacher material scraping backend and web app."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic==1.18.4",
    "apscheduler==3.11.0",
    "bcrypt==4.2.1",
    "cachetools==5.5.1",
    "click==8.1.8",
    "curl-cffi==0.7.4",
    "fastapi==0.118.0",
    "httptools==0.8.0",
    "lxml==5.3.0",
    "passlib==1.7.4",
    "pillow==11.2.1",
    "pycookiecloud==1.0.4",
    "pydantic==2.13.4",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "qbittorrent-api==2026.5.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.51",
    "starlette==0.48.0",
    "urllib3==2.3.0",
    "uvicorn==0.49.0",
    "uvloop==0.22.1",
]

[dependency-groups]
dev = [
    "watchfiles==1.0.4",
]

[tool.uv]
package = false
